Fixed #29 Removed header gap on overlay style

--- a/sass/components/_glazed-header--top.scss
+++ b/sass/components/_glazed-header--top.scss
@@ -30,7 +30,7 @@
       position: absolute;
       left: 0;
       right: 0;
-      top: 30px;
+      top: 39px;
       &.glazed-header--fixed {
         position: fixed;
       }
@@ -208,7 +208,7 @@ html.js .body--glazed-nav-desktop {
     top: 69px;
   }
   &.toolbar-fixed.toolbar-horizontal.toolbar-tray-open.toolbar-horizontal .glazed-header--top.glazed-header--overlay {
-    top: 110px;
+    top: 118px;
   }
   &.toolbar-fixed.toolbar-horizontal .glazed-header--top.glazed-header--fixed,
   &.toolbar-fixed.toolbar-horizontal .glazed-header--top.affix {
